[main-mvc] product, supplier and index view with mvc